# efibootdude

./: README.md  pyproject.toml
efibootdude/: main.py
src/efibootdude/: main.py
tests/: efibootmgr.peggy.txt
