[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "efibootdude"
version = "0.5.3"
description = "A visual wrapper for efibootmgr"
authors = [
    { name = "Joe Defen", email = "joedef@duck.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["app", "installer", "manager", "appimages"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    'console-window >= 1.0.0',
]

[project.urls]
"Homepage" = "https://github.com/joedefen/efibootdude"
"Bug Tracker" = "https://github.com/joedefen/efibootdude/issues"

[project.scripts]
efibootdude = "efibootdude.main:main"